fixed edges and tweaked timing of blurred background changes

--- a/src/server/resources/scss/main.scss
+++ b/src/server/resources/scss/main.scss
@@ -783,9 +783,9 @@ body .dropdown-menu {
 	width: 100%;
 	height: 100%;
 	z-index: 0;
-	transform: scale(1.1);
+/*	transform: scale(1.1);*/
 	background-image: url(../img/backgrounds/1.jpg);
-	transition: opacity 4.0s cubic-bezier(0.4, 0, 0.2, 1);
+	transition: opacity 2.0s cubic-bezier(0.4, 0, 0.2, 1);
 	opacity:0;
 	background-size: cover;
 	&.visible{
@@ -796,7 +796,7 @@ body .dropdown-menu {
 }
 
 #homebackgroundimage0{
-	-webkit-filter: blur(20px);
+	display:none;
 }
 
 
